overflow fix FINAL

--- a/dolor.css
+++ b/dolor.css
@@ -2,11 +2,9 @@ body {
   margin: 0;
   background-image: url("https://images.unsplash.com/photo-1547129172-c5f3ab428bc4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80");
   background-size: cover;
-  background-repeat: no-repeat
-}
-
-.overflow-wrap {
+  background-repeat: no-repeat;
   overflow-x: hidden;
+  width: 100vw;
 }
 
 h4 {
