--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
 body {
   background-color: #024766;
   margin: 0;
-}
-
-.overflow-wrap {
   overflow-x: hidden;
+  width: 100vw;
 }
 
 h1 {
